kubernetes/blueprint-templates/platform-baseline/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform-workload
  labels:
    app.kubernetes.io/part-of: azure-platform-lab
    platform.azure-lab.io/guardrails: baseline
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
